# DicewarePasswordGenerator

./: Cargo.toml  readme.txt
src/: diceware.icns  main.rs
