[package]
name = "diceware_password_generator"
version = "0.1.0"
edition = "2021"
description = "Generates a diceware password"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clipboard = "0.5.0"

[package.metadata.bundle]
icon = ["src/icon.icns"]
identifier = "com.digitalsolver.diceware"
